# bert

./: .gitignore  CHANGELOG.md  CHAT_SETUP.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCS_POLICY.md  LICENSE  README-improved.md  README.consolidated.md  README.md  REPO_CLEANUP_OPPORTUNITIES.md  SPRINT_PLAN_8HR.md  TAURI-RELEASE-GUIDE.md  TAURI-RELEASE-TOMORROW-PLAN.md  Trunk.toml  btc.json  commit_message.txt  docs_policy.md  documentation_guide.md  feature-roadmap.md  getting_started_developing.md  index.html  input.css  justfile  package-lock.json  package.json  styles.css  tailwind.config.js  test.json
.cargo/: config.toml
.claude/: CLAUDE.md
.cursor/rules/: commenting-guidelines.mdc  debugging-patterns.mdc  feature-checklist.mdc  implementation-workflow.mdc  new-features.mdc  patterns.mdc  project-structure.mdc  styling-guidelines.mdc
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: publish-testing.yml  publish.yml  release.yml
archive/phase2-completed-features/: README.md  model-browser.md
archive/phase2-obsolete-planning/: 2-hour-sprint-plan.md  in-app-controls-menu-implementation.md  model-browser-implementation-plan.md  model-browser-mvp-accurate-plan.md  model-browser-user-story.md  settings-implementation-roadmap.md  settings-infrastructure-research-guide.md
archive/phase3-redundant-getting-started/: Controls.md  code-navigation-guide.md  for-systems-scientists.md
assets/: README.md
assets/models/: BERT_PLATFORM_MANUAL_CREATION_GUIDE.md  README.md  UI_CONSISTENCY_ISSUES.md  bert.json  bitcoin.json  bitcoinabm.json  cell.json  circuit.json  cosmos-hub.json  ecosystem.json  ethereum.json  fixed?.json  flowtest.json  gns.json  halcyonic.json  interstate.json  interstate.json 13-07-59-250.json  llm.json  model-text-improvements.md  morphic-cultural.json  morphic-cultural2json.json  morphic-individual.json  motivational-field-dynamics.json  neuron.json  ontology.json  organization.json  ph.json  ph2.json  ph2f.json  safe-text-updates.md  schubs.json  solana.json  solar-panel.json  system.json
bert-compose/: ARCHITECTURE.md  Cargo.toml  DESIGN-VISION.md  MOBUS.md  POSITIONING.md  README.md  make-app.sh
bert-compose/src/: app.rs  askhal.rs  circuit.rs  compose.rs  docs.rs  examples.rs  export.rs  glyph.rs  ladder.rs  lens.rs  main.rs  sweep.rs  theme.rs
bert-compose/troncale-sweep/: 00-potential-fields.csv  00-potential-fields.json  01-flows.csv  01-flows.json  03-feedback-regulation.csv  03-feedback-regulation.json  04-cycling-oscillation.csv  04-cycling-oscillation.json  05-coupled-predator-prey.csv  05-coupled-predator-prey.json  05b-predator-prey-first-order.csv  05b-predator-prey-first-order.json  06-decay.csv  06-decay.json  07-networks.csv  07-networks.json  08-emergence-part.csv  08-emergence-part.json  README.md
bert-core/: Cargo.toml
bert-core/src/: lib.rs  validate.rs
deploy/mac/: Info.plist  build.sh  dmg_bg.afdesign  gen_icon.sh
docs/: ARCHITECTURE.md  BERT 2.0 Implications of the Common Core Theorem.md  BUILD.md  BUILD_GUIDE.md  CLAUDE.md  Controls.md  Geometry High-Level Overview.afpub  Info_Processing_Suite_Prototype.md  QUICK_BUILD_REFERENCE.md  README.md  RELEASE_WORKFLOW_GUIDE.md  Tutorials.md  archetypes.md  architecture.md  atomic-work-processes.md  bert-schema-reference.md  bert-typedb-schema.md  conservation-engine-redesign.md  documentation-guide.md  documentation-guidelines.md  generator.md  getting-started.md  h-element-theory.md  knowledge-architecture.md  lifecycle-dynamics.md  mobus-reference.md  process-primitives.md  roadmap-template.md  simulation-linalg-bridge.md  simulation.md  system-language-spec-v2-addendum.md  system-language-spec.md  typedb-query-patterns.md
docs/architecture/: Architecture.afpub  button-system-analysis-unified.md  button-system-dependency-analysis.md  comprehensive-architecture-overview.md  icon-integration-lessons.md  icon-migration-failure.md  interaction-system-architecture.md  overview.md  phase1-lessons-learned.md  quick_overview.md  system-language-implementation.md
docs/contributing/: contributing.md  documentation-implementation-analysis.md  feature-documentation-process.md  feature-template.md  guidelines.md  task-templates.md
docs/development/: llm-assisted-development-guide.md  settings-infrastructure-research-guide.md
docs/examples/: bitcoin.md  cell.md  ecosystem.md  llm.md  organization.md  solar-panel.md
docs/features/: chat-knowledge-system.md  drag-and-drop-ui-v2.md  feedback-loop-visualization.md  flexible-system-creation.md  flow-endpoint-handles.md  improve-element-clickability.md  interface-subsystem-reactivation.md  llm-chat-integration.md  model-browser.md  phase-3-implementation-plan.md  phase2-continuation-prompt.md  process-primitive-visualization.md  process-primitives.md  screenshot-export.md  smart-parameters.md  spatial-interaction-system.md  spatial-interaction-ux.md  subsystem-archetypes.md  subsystem-minimum-size-fix.md  ui-field-hierarchy.md  unified-agent-system.md
docs/ux/: README.md
gitbook/: 1.0.md  README.md  SUMMARY.md  beta.md
python/: agents.py  json_bridge.py  mesa_runner.py  model.py  requirements.txt  scenarios.py  sweep_sir.py  test_primitives.py  typedb_bridge.py
scripts/: README.md  bert.sh  gen-feature-docs.sh
site/: astro.config.mjs  package-lock.json  package.json
src/: constants.rs  data_model.rs  events.rs  lib.rs  main.rs  resources.rs  states.rs  utils.rs
src-tauri/: Cargo.toml  cell.json  organization.json  solar-panel.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat_service.rs  generator.rs  intermediate.rs  lib.rs  main.rs  simulation.rs  typedb_reader.rs
test_files/: 1_level.json  flow_button_shows_despite_incomplete_triplet.json
tests/: native_import.rs
tools/: relayout.py
tools/bert-typedb/: Cargo.toml  schema.tql
tools/bert-typedb/src/: driver.rs  error.rs  escape.rs  insert.rs  lib.rs  main.rs  schema.rs  validate.rs
tools/bert-typedb/tests/: bitcoin_roundtrip.rs  driver_smoke.rs
(+347 files in other folders)
