[package]
name = "bert"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15", features = [
    "bevy_picking",
    "bevy_mesh_picking_backend",
] } #, features = ["dynamic_linking"] }
bevy_file_dialog = { git = "https://github.com/richardhozak/bevy_file_dialog.git" }
bevy-inspector-egui = "0.29.0"
bevy_picking = { version = "0.15", features = ["bevy_mesh_picking_backend"] }
bevy_prototype_lyon = "0.13.0"
console_error_panic_hook = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"
enum-iterator = "2.1.0"
gloo-file = "0.3"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
leptos-bevy-canvas = { git = "https://github.com/Synphonyte/leptos-bevy-canvas.git" }
leptos_meta = { version = "0.7", default-features = true }
leptos-use = "0.15"
lyon_algorithms = "1"
num-traits = "0.2.18"
regex = "1.10.4"
rfd = "0.15.2"
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = [
    "all",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
uuid = { version = "1.12.1", features = ["v4"] }

[workspace]
members = ["src-tauri"]


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["debug_selection"]
init_complete_system = []
debug_selection = []
