[package]
name = "bert"
version = "0.1.0"
description = "Tool for deep systems analysis"
authors = ["Joseph Ensminger <?>", "Marc-Stefan Cassola <maccesch@synphonyte.com>", "Joel Beicher <joel@synphonyte.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-fs = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-opener = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }

# Minimal LLM chat dependencies
leptos = { version = "0.7", features = ["csr"] }

# LLM Providers (all optional, but ollama is default)
ollama-rs = { version = "0.2", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
async-openai = { version = "0.28", optional = true }
anthropic = { version = "0.0.8", optional = true }

[features]
default = ["local-llm"]
local-llm = ["ollama-rs"]
cloud-api = ["reqwest", "async-openai", "anthropic"]
all-providers = ["local-llm", "cloud-api"]

